# float8_experimental

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: scale-config.yml
.github/workflows/: pylint.yml  python-app.yml  ufmt.yml  unit_test_4gpu.yaml
benchmarks/: bench_constants.py  bench_dynamic_linear_fused_cast.py  bench_encoder_block.py  bench_linear_float8.py  bench_linear_float8_nots.py  bench_matmul.py  bench_multi_gpu.py  bench_padding.py  profile_linear_float8.py  profile_linear_float8_nots.py  utils.py
finetune/: context.py  mnist.py
float8_experimental/: __init__.py  config.py  distributed_utils.py  float8_aten_api.py  float8_dynamic_linear.py  float8_dynamic_utils.py  float8_linear.py  float8_linear_nots.py  float8_linear_utils.py  float8_ops.py  float8_python_api.py  float8_scaling_utils.py  float8_tensor.py  float8_tensor_parallel.py  float8_utils.py  fsdp_utils.py  inference.py  te_utils.py  tp_linear.py
float8_experimental/dynamic_linear/: __init__.py  dynamic_float8_linear.py
float8_experimental/fused_kernels/: fused_casting_kernels.py
float8_playground/: distributed_utils.py  float8_aten_api.py  float8_linear.py  float8_linear_nots.py  float8_linear_utils.py  float8_python_api.py  float8_tensor.py  float8_utils.py  test.py  test_fsdp.sh  test_sam.py  tp_linear.py
te_examples/: quickstart_guide.py
test/: conftest.py  fsdp_utils.py  test.py  test_base.py  test_compile.py  test_dtensor.py  test_dtensor.sh  test_dynamic_fsdp_compile.py  test_everything.sh  test_fsdp.py  test_fsdp.sh  test_fsdp_compile.py  test_fsdp_compile.sh  test_fused_kernels.py  test_inference_flows.py  test_numerics_integration.py  test_sam.py  test_tp.py  test_tp.sh
test/test_fsdp/: test_flat_param_fsdp_compile.py  test_fsdp_common.py  test_fsdp_compile.py  test_per_param_fsdp_compile.py  test_per_param_fsdp_eager.py
test/test_fsdp2/: test_fsdp2.py  test_fsdp2_common.py  test_fsdp2_compile.py  test_fsdp2_eager.py
tests/: test.py  test_compile.py  test_dynamo.py  test_everything.sh  test_fsdp.py  test_fsdp.sh  test_sam.py  test_tp.py  tmp.py
