[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "float8_experimental"
version = "0.0.1"
description = "This is a prototype of a float8 training UX in native PyTorch, with full PT2.0 and distributed support."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch >= 2.1",
    "fairscale==0.4.13"
]

[project.optional-dependencies]
test = [
    "transformers==4.32.0",
    "pandas >= 2.0",
    "tqdm==4.66.1",
    "fire==0.5.0"
]
dev = [
    "black==23.3.0",
    "usort==1.0.6",
    "ufmt==2.1.0",
    "libcst==1.0.1",
    "pytest==7.4.0",
    "bumpver",
    "pip-tools"
]

# Since we have multiple top level folders we specify what we want to be included
# in the package
[tool.setuptools]
packages = ["float8_experimental"]

[tool.usort]
first_party_detection = false

[tool.black]
target-version = ["py38"]
